[gd_scene load_steps=6 format=3 uid="uid://dsrkfx4y51h8t"]

[ext_resource type="Theme" uid="uid://cbbnfw4qu38ke" path="res://Themes/login_register_theme.tres" id="1_kllls"]
[ext_resource type="Script" path="res://script/login.gd" id="1_us0yn"]
[ext_resource type="FontFile" uid="uid://ypl6q6rxmhau" path="res://Fonts/PixelOperator8.ttf" id="2_3m2ts"]
[ext_resource type="FontFile" uid="uid://cxfo73ujxg46t" path="res://Fonts/PixelOperator8-Bold.ttf" id="3_1a48s"]
[ext_resource type="Script" path="res://script/http_requests/login_request.gd" id="5_qoq4a"]

[node name="Login_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -420.0
offset_right = -960.0
offset_bottom = -420.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
theme = ExtResource("1_kllls")
script = ExtResource("1_us0yn")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="Email" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 770.0
offset_top = 420.0
offset_right = 1150.0
offset_bottom = 465.0
pivot_offset = Vector2(190, 22.5)
theme_override_fonts/font = ExtResource("2_3m2ts")
theme_override_font_sizes/font_size = 16
placeholder_text = "E-Mail"

[node name="Password" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 770.0
offset_top = 475.0
offset_right = 1150.0
offset_bottom = 520.0
pivot_offset = Vector2(190, 22.5)
theme_override_fonts/font = ExtResource("2_3m2ts")
theme_override_font_sizes/font_size = 16
placeholder_text = "Password"

[node name="Login" type="Button" parent="."]
layout_mode = 0
offset_left = 880.0
offset_top = 530.0
offset_right = 1040.0
offset_bottom = 575.0
pivot_offset = Vector2(80, 22.5)
text = "Login"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 920.0
offset_top = 375.0
offset_right = 1000.0
offset_bottom = 397.5
pivot_offset = Vector2(40, 11.25)
theme_override_fonts/font = ExtResource("3_1a48s")
theme_override_font_sizes/font_size = 16
text = "Login"

[node name="login_request" type="HTTPRequest" parent="."]
script = ExtResource("5_qoq4a")

[connection signal="pressed" from="Login" to="login_request" method="_on_login_pressed"]
[connection signal="request_completed" from="login_request" to="login_request" method="_on_request_completed"]
